--- a/src/locales/zh-CN/translation.json
+++ b/src/locales/zh-CN/translation.json
@@ -1202,7 +1202,7 @@
         "openai_gpt_4o_transcribe": "最准确的转录",
         "openai_whisper_1": "原始 Whisper 模型",
         "groq_whisper_large_v3_turbo": "216 倍实时速度",
-        "mistral_voxtral_mini_latest": "快速多语言转录"
+        "gemini_gemini_3_0_flash": "快速多语言转录"
       },
       "cloud": {
         "openai_gpt_5_2": "最新旗舰推理模型",
