--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1202,7 +1202,7 @@
         "openai_gpt_4o_transcribe": "Most accurate transcription",
         "openai_whisper_1": "Original Whisper model",
         "groq_whisper_large_v3_turbo": "216x real-time speed",
-        "mistral_voxtral_mini_latest": "Fast multilingual transcription"
+        "gemini_gemini_3_0_flash": "Fast multilingual transcription"
       },
       "cloud": {
         "openai_gpt_5_2": "Latest flagship reasoning model",
