--- a/src/locales/zh-TW/translation.json
+++ b/src/locales/zh-TW/translation.json
@@ -1202,7 +1202,7 @@
         "openai_gpt_4o_transcribe": "最高準確度的轉錄",
         "openai_whisper_1": "原始 Whisper 模型",
         "groq_whisper_large_v3_turbo": "216 倍即時速度",
-        "mistral_voxtral_mini_latest": "快速多語言轉錄"
+        "gemini_gemini_3_0_flash": "快速多語言轉錄"
       },
       "cloud": {
         "openai_gpt_5_2": "最新旗艦推理模型",
